# media2rag

./: .env  .gitattributes  .gitignore  .gitmodules  AGENTS.md  Makefile  PROJECT_CONTEXT.md  README.md  _done.json  bookfinder.py  cli.py  config.py  go.mod  go.sum  lancedb_server.py  main.py  opencode.json  pyproject.toml
api/: openapi.json
clients/: ollama_client.py  ollama_embedder.py  openrouter_client.py  protocol.py
cmd/media2rag/: ask.go  batch.go  chat.go  config.go  documents.go  main.go  (+16 more)
docs/: architecture.md  audit-issues.md  chat.md  cli-commands.md  cli.md  core-purpose.md  ctg-pipeline.md  deployment.md  extraction.md  graphrag-evolution.md  graphrag.md  http-api.md  hybrid-rag.md  issues-roadmap.md  llm-clients.md  rag-engine.md  roadmap.md  skill-system.md  sqlite-schema.md  strategy.md  telemetry.md  vector-store.md  vision.md  workspace.md
domain/: chunk.py  document.py
extractors/: audio_extractor.py  base.py  image_extractor.py  markdown_extractor.py  pdf_epub_extractor.py  telegram_extractor.py  url_extractor.py  video_extractor.py
ingestion/: embedder.py  normalizer.py  pipeline.py  recursive_chunker.py  store.py
media2rag-gui/: Project.swift  README.md  Tuist.swift  project.json
output_test/: 1 000 000 000 на бассейнах! ❘ Как продать экспертность, масштабироваться и передать бизнес сыну.md
processors/: chunked_transformer.py  chunker.py  compressor.py  content_router.py  ctg_pipeline.py  evaluator.py  generator.py  output_parser.py  post_filter.py  transformer.py
scripts/: benchmark_quality.py  migrate_memories.py  reindex_all.py
(+285 files in other folders)
