[project]
name = "media2rag"
version = "0.1.0"
description = "Convert PDF, EPUB, video, audio, images to RAG-ready Markdown"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "marker-pdf>=1.0.0",
    "openai-whisper>=20240930",
    "yt-dlp>=2024.0.0",
    "pydub>=0.25.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "unidecode>=1.3.0",
    "lancedb>=0.30.2",
    "pandas>=3.0.3",
    "sentence-transformers>=3.0.0",
]

[project.scripts]
media2rag = "cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
